# SSL

./: .gitignore  CMakeLists.txt  Notes_de_travail_cours.odt  README.md  conanfile.txt  no_multi_cast_out.sh
src/ai/: CMakeLists.txt
src/ai/data/: referee.h
src/ai/manager/: manual.cpp
src/ai/math/: test_circular_vector.cpp
src/ai/physic/: test_movement_predicted_by_integration.cpp  test_movement_sample.cpp  test_movement_with_no_prediction.cpp
src/ai/robot_behavior/: SeeAndGoToBallStrat.h  chipkick.cpp  chipkick.h  kicker.cpp  kicker.h  seeAndGoToBall.cpp  seeAndGoToBall.h  translation_test.cpp  translation_test.h
src/ai/strategy/: SeeAndGoToBallStrat.cpp  SeeAndGoToBallStrat.h  adapt_pass.h  see_and_go_to_ball_strat.cpp  see_and_go_to_ball_strat.h  wall_strat_1_2.cpp  wall_strat_1_2.h
src/ai/vision/: vision_data.h
src/client/: CMakeLists.txt  Master.cpp  RefereeClient.h  SimClient.h  VisionClient.h  referee_client_single_thread.h  viewer_server.cpp
